[package]
name = "tidbyt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.2"
bdf = "0.6.0"
cached = "0.44.0"
chrono = { version = "0.4.26", features = ["unstable-locales"] }
chrono-tz = "0.9.0"
clap = { version = "4.3.23", features = ["derive"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
inquire = "0.6.2"
itertools = "0.12.1"
jmap-client = "0.3.0"
num-traits = "0.2.17"
oauth2 = "4.4.2"
once_cell = "1.18.0"
palette = "0.7.3"
png = "0.17.10"
quick-xml = "0.31.0"
raqote = "0.8.2"
reqwest = { version = "0.11.18", features = ['json', 'blocking'] }
serde = { version = "1.0.178", features = ['derive'] }
suncalc = "0.4.0"
tokio = { version = "1.29.1", features = ['full'] }
uom = "0.35.0"
webp = "0.2.6"

[dev-dependencies]
rstest = "0.18.2"

[lints.clippy]
module-inception = "allow"
